--- a/tets/manifest.json
+++ b/tets/manifest.json
@@ -2,7 +2,7 @@
   "name": "ArtiFig",
   "id": "1310180045900869346",
   "api": "1.0.0",
-  "main": "code.js",
+  "main": "dist/code.js",
   "capabilities": [],
   "enableProposedApi": false,
   "editorType": [
