--- a/tets/package.json
+++ b/tets/package.json
@@ -11,6 +11,7 @@
   "license": "",
   "devDependencies": {
     "@figma/plugin-typings": "^1.81.0",
+    "@types/file-saver": "^2.0.7",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
