--- a/tets/package.json
+++ b/tets/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@figma/plugin-typings": "^1.81.0",
     "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
