canvas page addons

--- a/.hintrc
+++ b/.hintrc
@@ -19,7 +19,8 @@
       "default",
       {
         "ignore": [
-          "scrollbar-width"
+          "scrollbar-width",
+          "scrollbar-color"
         ]
       }
     ],
